feat: :fire: add paginate and paginateResource
