# app/Http/Resources/contact/ContactResource.php
@@ -2,40 +2,7 @@
 
 namespace App\Http\Resources\contact;
 
-use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
-
-/**
- * @OA\Schema(
- *     schema="ContactResource",
- *     title="Contact Resource",
- *     description="Contact resource representation",
- *     @OA\Property(
- *         property="id",
- *         type="integer",
- *         description="Id of the contact (encrypted)",
- *         example="1"
- *     ),
- *     @OA\Property(
- *         property="name",
- *         type="string",
- *         description="Name of the contact",
- *         example="John Doe"
- *     ),
- *     @OA\Property(
- *         property="phone",
- *         type="string",
- *         description="Phone number of the contact",
- *         example="123456789"
- *     ),
- *     @OA\Property(
- *         property="nickname",
- *         type="string",
- *         description="Nickname of the contact",
- *         example="Johnny"
- *     )
- * )
- */
 
 
 
